# RemoteID_reader

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
firmware/: FLASH_INSTRUCTIONS.md
firmware/source/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
firmware/source/components/remote_id_decoder/: CMakeLists.txt  remote_id_decoder.c
firmware/source/components/remote_id_decoder/include/: remote_id_decoder.h
firmware/source/main/: CMakeLists.txt  main.c
src/remote_id/: __init__.py  cli.py  decoder.py  file_processor.py  live_decoder.py  live_monitor.py
src/remote_id/examples/: example_usage.py
wyniki/: wyniki-12.rtf
